# sea_battle

./: .gitignore  CMakeLists.txt  Doxyfile  Korshkov_Aleksandr_OOP_lb1.docx  LICENSE  Makefile  README.md  blanks.txt  build.sh  clean_docs.sh  docs.sh  run.sh
include/: board.hpp  cli_parser.hpp  game.hpp  game_state.hpp  renderer.hpp  ship.hpp  shipmanager.hpp  structures.hpp  units.hpp
include/abilities/: abilities_list.hpp  ability_creator.hpp  ability_manager.hpp
include/exceptions/: attack_out_of_range.hpp  hash_mismatch.hpp  incorrect_ship_position.hpp  invalid_coordinate.hpp  invalid_ship_size.hpp  no_available_abilities.hpp  no_avaliable_abilities.hpp  out_of_range.hpp  revealed_cell_attack.hpp  unable_to_open_file.hpp
include/json_modules/: deserialization.hpp  file_wrapper.hpp  serizalization.hpp
include/ships/: ship.hpp  ship_manager.hpp  shipmanager.hpp
labs/: Korshkov_Aleksandr_OOP_lb1.docx  lab1.docx  lab2.docx  lab3.docx  lab4.docx
labs/reports/: Korshkov_Aleksandr_OOP_lb2.docx  Korshkov_Aleksandr_OOP_lb3.docx  Pivoev_Nikita_OOP_lb3.docx
reports/: Korshkov_Aleksandr_OOP_lb3.docx
scripts/: build.sh  docs.sh
scripts/Linux/: build.sh  clear_build.sh  docs.sh
src/: cli_parser.cpp  game.cpp  game_state.cpp  main.cpp  renderer.cpp
src/exceptions/: attack_out_of_range.cpp  incorrect_ship_position.cpp  invalid_ship_size.cpp  no_available_abilities.cpp  unable_to_open_file.cpp
src/modules/: board.cpp  ship.cpp  ship_manager.cpp  shipmanager.cpp  units.cpp
src/modules/abilities/: abilities_list.cpp  ability_creator.cpp  ability_manager.cpp
src/modules/json_modules/: deserialization.cpp  file_wrapper.cpp  serialization.cpp
src/modules/ships/: ship.cpp  ship_manager.cpp  shipmanager.cpp
test_files/: painter.cpp  painter.hpp
